First iteration on config form

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -1,2 +1,14 @@
 ${project.parent.artifactId}.title=Epts Synchronize Module
 ${project.parent.artifactId}.manage=Manage module
+eptssync.config.installationType.select=Tipo instalacao
+eptssync.config.installationType.source=Source
+eptssync.config.installationType.destination=Destination
+eptssync.config.button.initConfig=Avancar
+eptssync.config.installationType.label=Tipo Instalacao
+eptssync.config.syncRootDirectory.label=Directorio de Sincronizacao
+eptssync.config.classPath.label=Class Path
+eptssync.config.originAppLocationCode.label=Nome da Instancia/Local
+eptssync.config.dataBaseUserName.label=User base de dados
+eptssync.config.dataBaseUserPassword.label=Password Base de dados
+eptssync.config.connectionURI.label=URL Base de Dados
+eptssync.config.driveClassName.label=Driver Conexao Base de dados
