--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -12,3 +12,32 @@ eptssync.config.dataBaseUserName.label=User base de dados
 eptssync.config.dataBaseUserPassword.label=Password Base de dados
 eptssync.config.connectionURI.label=URL Base de Dados
 eptssync.config.driveClassName.label=Driver Conexao Base de dados
+eptssync.config.button.installation=Instalacao
+eptssync.config.button.operations=Operacoes
+eptssync.config.button.tables=Tabelas
+
+eptssync.config.tab.installation.label=Instalacao
+eptssync.config.tab.operations.label=Operacoes
+eptssync.config.tab.tables.label=Tabelas
+eptssync.config.button.save=Gravar Configuracoes
+
+eptssync.config.operation.operationType=Tipo Operacao
+eptssync.config.operation.maxRecordPerProcessing=Qtd. Registos/Processamento
+eptssync.config.operation.maxSupportedEngines=Thread Suportadas
+eptssync.config.operation.minRecordsPerEngine=Qtd.Registos min/thread
+eptssync.config.operation.disabled=Estado
+eptssync.config.operation.doIntegrityCheckInTheEnd=Verificar Intergidade No fim
+eptssync.config.operation.processingMode=Modo de Processamento
+eptssync.config.operation.sourceFolders=Directorios de origem
+eptssync.config.operation.header.label=Configuracao de Operacao
+eptssync.config.operations.header.label=Operacoes disponiveis
+eptssync.config.operation.save=Gravar
+eptssync.config.operation.close=Fechar
+
+eptssync.config.table.save=Gravar
+eptssync.config.table.close=Fechar
+eptssync.config.table.tableName=Tabela
+eptssync.config.table.parents=Parentes
+eptssync.config.table.removeForbidden=Removivel
+eptssync.config.table.parent.defaultValueDueInconsistency=Se ausente, Substituir Por
+		
