Added support for new tables configuration

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -1,5 +1,8 @@
 ${project.parent.artifactId}.title=Epts Synchronize Module
 ${project.parent.artifactId}.manage=Manage module
+
+eptssync.config.answer.yes=Sim
+eptssync.config.answer.no=Nao
 eptssync.config.installationType.select=Tipo instalacao
 eptssync.config.installationType.source=Source
 eptssync.config.installationType.destination=Destination
@@ -34,6 +37,8 @@ eptssync.config.operations.header.label=Operacoes disponiveis
 eptssync.config.operation.save=Gravar
 eptssync.config.operation.close=Fechar
 
+eptssync.config.table.active=Activo
+eptssync.config.table.metadata=Metadata
 eptssync.config.table.save=Gravar
 eptssync.config.table.close=Fechar
 eptssync.config.table.tableName=Tabela
