Started sync interface coding

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -1,6 +1,7 @@
 ${project.parent.artifactId}.title=Epts Synchronize Module
 ${project.parent.artifactId}.manage=Manage module
 
+eptssync.config.header=Configuracao
 eptssync.config.answer.yes=Sim
 eptssync.config.answer.no=Nao
 eptssync.config.installationType.select=Tipo instalacao
@@ -45,4 +46,7 @@ eptssync.config.table.tableName=Tabela
 eptssync.config.table.parents=Parentes
 eptssync.config.table.removeForbidden=Removivel
 eptssync.config.table.parent.defaultValueDueInconsistency=Se ausente, Substituir Por
+
+eptssync.sync.header=Syncronizacao
+eptssync.sync.button.start=Iniciar
 		
