Resolved dynamic POJO loading issue on openmrs

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -1,6 +1,10 @@
 ${project.parent.artifactId}.title=Epts Synchronize Module
 ${project.parent.artifactId}.manage=Manage module
 
+eptssync.manage.label=Gestao
+eptssync.initConfig.label=Configuracap
+eptssync.initSync.label=Sincronizacao
+
 eptssync.config.header=Configuracao
 eptssync.config.answer.yes=Sim
 eptssync.config.answer.no=Nao
