Started coding of sync status ui

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -42,6 +42,15 @@ eptssync.config.operations.header.label=Operacoes disponiveis
 eptssync.config.operation.save=Gravar
 eptssync.config.operation.close=Fechar
 
+eptssync.config.operation.database_preparation=Preparacao DB
+eptssync.config.operation.pojo_generation=Geracao POJO
+eptssync.config.operation.inconsistency_solver=Resolucao Incons.
+eptssync.config.operation.export=Exportacao
+eptssync.config.operation.transport=Transporte
+eptssync.config.operation.load=Descarregamento
+eptssync.config.operation.synchronization=Sincronizacao
+eptssync.config.operation.consolidation=Consolidacao
+
 eptssync.config.table.active=Activo
 eptssync.config.table.metadata=Metadata
 eptssync.config.table.save=Gravar
@@ -53,4 +62,8 @@ eptssync.config.table.parent.defaultValueDueInconsistency=Se ausente, Substituir
 
 eptssync.sync.header=Syncronizacao
 eptssync.sync.button.start=Iniciar
+
+eptssync.sync.progress.bar=Progresso
+eptssync.sync.progress.summary=Resumo
+
 		
